test/Fail/OverlapLocal2.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _8 : C true
  Candidates
    local : C true
    Ct : {x : Bool} → C x
    (stuck)

OverlapLocal2.agda:14.13-14: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  OverlapLocal2.agda:14.13-14
